@startuml
title ksp-fixtures 異常系Entityクラス図
skinparam shadowing false
skinparam roundcorner 8
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam componentStyle rectangle
skinparam defaultTextAlignment left
skinparam noteBackgroundColor #FFFDE7
skinparam noteBorderColor #9E9E9E
skinparam ArrowColor #455A64
skinparam activityDiamondBackgroundColor #ECEFF1
skinparam activityDiamondBorderColor #455A64

package "invalid-select" {
  class TestAllHiddenEntity <<invalid fixture>>
  class TestAllHiddenMixEntity <<invalid fixture>>
  class TestDualAnnotationEntity <<invalid fixture>>
  class TestDuplicateAliasEntity <<invalid fixture>>
  class TestDuplicateAliasHiddenEntity <<invalid fixture>>
  class TestDuplicateAliasMixEntity <<invalid fixture>>
}

class PropsProcessor
class EntityMetaValidator

TestAllHiddenEntity ..> PropsProcessor : compile input
TestAllHiddenMixEntity ..> PropsProcessor : compile input
TestDualAnnotationEntity ..> PropsProcessor : compile input
TestDuplicateAliasEntity ..> PropsProcessor : compile input
TestDuplicateAliasHiddenEntity ..> PropsProcessor : compile input
TestDuplicateAliasMixEntity ..> PropsProcessor : compile input
PropsProcessor --> EntityMetaValidator

@enduml
